--- a/pesan.html
+++ b/pesan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>SuryaPCB - Desain PCB Online</title>
     <meta name="twitter:card" content="">
     <meta name="description" content="SuryaPCB merupakan situs website yang menyediakan layanan jasa desain PCB secara online di Indonesia untuk kalangan pelajar dan penghobi elektronika dengan harga terjangkau.">
     <meta property="og:type" content="website">
@@ -94,7 +94,7 @@
                     <h3 class="section-subheading text-muted">Hubungi Kami untuk Pemesanan</h3>
                     <div>
                         <ul class="list-inline social-buttons">
-                            <li class="list-inline-item"><a class="text-success" href="instagram.com/suryapcb"><i class="fa fa-instagram"></i></a></li>
+                            <li class="list-inline-item"><a class="text-success" href="https://instagram.com/suryapcb"><i class="fa fa-instagram"></i></a></li>
                             <li class="list-inline-item"><a class="text-success" href="https://t.me/suryapcb"><i class="fa fa-telegram"></i></a></li>
                             <li class="list-inline-item"><a class="text-success" href="#"><i class="fa fa-whatsapp"></i></a></li>
                         </ul>
